--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<H1>hello coursera</H1>
+<H1>hello coursera! it's a great day</H1>
 </body>
 </html>
